[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | recce/data
)/
'''

# ============================================================================
# Ruff Configuration - Replaces flake8 + isort
# ============================================================================
[tool.ruff]
# Same line length as Black
line-length = 120

# Target Python 3.9+ (minimum supported version)
target-version = "py39"

# Files to include/exclude
include = ["recce/**/*.py", "tests/**/*.py", "recce_cloud/**/*.py", "*.py"]
exclude = [
    ".git",
    ".venv",
    "venv",
    ".tox",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
    "recce/data",
    "js",
    "debug",
    "images",
    "docs",
]

[tool.ruff.lint]
# Enable rule categories
# See: https://docs.astral.sh/ruff/rules/
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade (modern Python syntax)
    "B",     # flake8-bugbear (likely bugs)
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "PIE",   # flake8-pie (misc lints)
    "RET",   # flake8-return (return statement improvements)
    "RSE",   # flake8-raise (raise statement improvements)
    "PTH",   # flake8-use-pathlib (prefer pathlib over os.path)
    "PL",    # pylint
]

# Ignore specific rules
# These match your current .flake8 ignores plus Ruff defaults
ignore = [
    # Maintained from .flake8:
    "F811",   # Redefinition of unused name
    "W605",   # Invalid escape sequence (often false positives in regex)

    # Additional pragmatic ignores for existing codebase:
    "E402",   # Module level import not at top (allow conditional imports)
    "PLR0913", # Too many arguments to function (can be necessary)
    "PLR0912", # Too many branches (will refactor later)
    "PLR0915", # Too many statements (will refactor later)
    "PLR2004", # Magic value used in comparison (acceptable for now)
    "N802",   # Function name should be lowercase (allow mixed case)
    "N803",   # Argument name should be lowercase
    "N806",   # Variable should be lowercase
    "SIM108", # Use ternary operator (not always clearer)
    "RET504", # Unnecessary variable assignment before return
    "RET505", # Unnecessary else after return
    "RET506", # Unnecessary else after raise
    "UP006",  # Use `list` instead of `List` (allow for Python 3.9 compat)
    "UP007",  # Use `X | Y` for union types (allow for Python 3.9 compat)
    "UP035",  # Import from typing (allow for Python 3.9 compat)
]

# Allow autofix for these rule categories
fixable = [
    "I",     # isort (auto-sort imports)
    "F",     # Remove unused imports
    "UP",    # Upgrade syntax
    "C4",    # Improve comprehensions
    "PIE",   # Misc improvements
]

# Never autofix these (require manual review)
unfixable = [
    "F401",  # Unused import (might be intentional for public API)
    "B",     # Likely bugs (review carefully)
]

# Per-file ignores (migrated from .flake8)
[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # Unused import (public API exports)
    "F403",  # Star imports for API
]
"recce/adapter/dbt_adapter.py" = [
    "E402",  # Module import not at top (conditional imports needed)
]
"tests/**/*.py" = [
    "PLR2004", # Magic values OK in tests
    "S101",    # Use of assert OK in tests
]

# Import sorting configuration (replaces isort)
[tool.ruff.lint.isort]
known-first-party = ["recce", "recce_cloud"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
split-on-trailing-comma = false
lines-after-imports = 2

# Code complexity settings
[tool.ruff.lint.mccabe]
max-complexity = 15  # Match your current flake8 setting

# Pylint settings
[tool.ruff.lint.pylint]
max-args = 8  # Slightly generous for existing code
max-branches = 15  # Match complexity setting

# Formatting (can replace Black eventually, but keep Black for now)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# MyPy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten later
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
ignore_missing_imports = true  # Start permissive for third-party
no_implicit_optional = true

# Exclude patterns
exclude = [
    '^recce/data/',
    '^build/',
    '^dist/',
    '\.tox/',
]

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "dbt.*",
    "deepdiff.*",
    "portalocker.*",
    "itsdangerous.*",
    "ruamel.*",
    "py_markdown_table.*",
    "watchdog.*",
    "websockets.*",
    "sqlglot.*",
    "github.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
markers = [
    "asyncio: mark test as an async test (used by pytest-asyncio)",
]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["recce"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "recce/data/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
