[project]
name = "recce"
dynamic = ["version"]
description = "Environment diff tool for dbt"
readme = "README.md"
authors = [{name = "InfuseAI Dev Team", email = "dev@infuseai.io"}]
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

dependencies = [
    "boto3",
    "requests>=2.28.1",
    "ruamel.yaml>=0.18.6",
    "click>=7.1",
    "deepdiff>=7.0,<9.0",
    "portalocker",
    "fastapi",
    "itsdangerous",
    "uvicorn",
    "pydantic",
    "jinja2",
    "rich>=12.0.0",
    "sentry-sdk",
    "watchdog",
    "websockets",
    "py-markdown-table",
    "python-dateutil",
    "python-multipart",
    "GitPython",
    "PyGithub",
    "sqlglot>=27.29.0,<29.0",
    "pytz",
    "packaging",
]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0; python_version >= '3.10'"]
dev = [
    "pytest>=4.6",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-flake8",
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.2.0",
    "pre-commit>=4.2.0",
    "pytest-mypy",
    "pytest-cov",
    "twine",
    "tox",
    "tox-uv",
    "pandas",
    "httpx",
    "dbt-duckdb",
]

[project.scripts]
recce = "recce.cli:cli"

[project.urls]
"Bug Tracker" = "https://github.com/InfuseAI/recce/issues"
"Homepage" = "https://github.com/InfuseAI/recce"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "recce/VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.sdist]
include = [
    "/recce",
]
artifacts = [
    "/recce/data",
]

[tool.hatch.build.targets.wheel]
packages = ["recce"]
artifacts = [
    "/recce/data",
]

[tool.uv.workspace]
members = ["recce_cloud"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = [
    "asyncio: mark test as an async test (used by pytest-asyncio)",
]
asyncio_default_fixture_loop_scope = "function"
