[project]
name = "recce-cloud"
dynamic = ["version", "readme"]
description = "Lightweight CLI for Recce Cloud operations"
authors = [{name = "InfuseAI Dev Team", email = "dev@infuseai.io"}]
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

dependencies = [
    "click>=7.1",
    "requests>=2.28.1",
    "rich>=12.0.0",
]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.scripts]
recce-cloud = "recce_cloud.cli:cloud_cli"

[project.urls]
"Bug Tracker" = "https://github.com/InfuseAI/recce/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.custom]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "recce_cloud"
